Solve task 9